<resources>
    <string name="app_name">GoodNotes</string>
    <string name="action_settings">Settings</string>
    <string name="noteTitle">Title</string>

    <string name="editorActivTitle">Add a note</string>
    <string name="noteHint">Text</string>

    <string name="editor_insert_note_failed">Error with saving note </string>
    <string name="editor_insert_pet_successful"> Note saved </string>

    // colors
    <string name="color_default">Default</string>
    <string name="color_red">Red</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_delete_pet_failed">Error deleting note</string>
    <string name="editor_delete_pet_successful">Delete note sucsessful</string>
    <string name="delete_dialog_msg">Delete note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Key word</string>

    // order by spinner
    <string name="order_by">Order by</string>
    <string name="order_date">Date</string>
    <string name="order_number">Number</string>
    <string name="order_color">Color</string>
    <string name="order_favourite">Favorite</string>
    <string name="order_title">Title</string>
    <string name="order_note">Alphabet</string>
    <string name="set_time">Set time</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="alarm_on">Alarm is on</string>
    <string name="set_notification">Set notification</string>
    <string name="set_date">Set date</string>
    <string name="action_delete">delete</string>
    <string name="action_add_image">Add image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Notes</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_set_password">Password</string>
    <string name="nav_notifications">Rate App</string>
    <string name="nav_settings">Rate an App</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Notes</item>
        <item>Photos</item>
        <item>Set password</item>
        <item>Rate App</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About app</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notificTitle">Notification</string>
    <string name="notificInfo">From GoodNotes!</string>
    <string name="notifTicker">Hi</string>
    <string name="bottomDelete">Delete</string>
    <string name="bottomNotification">Notification</string>
    <string name="bottomImage">Image</string>
    <string name="bottomColr">Color</string>
    <string name="menuSave">save</string>
    <string name="dialogTitle">Thx, for rating us!</string>
    <string name="dialogMessage">If you like this app, please leave us a feedback</string>
    <string name="dialogYes">Yes, rate now</string>
    <string name="dialogNo">No, maybe later</string>
    <string name="dialogYesthx">Thx</string>
    <string name="dialogNoThx">Thx, for patience</string>
    <string name="appMarketLink">market://details?id=com.batura.stas.notesaplication</string>

    //folder diloag
    <string name="create_folder">Create folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="Cancel">Cancel</string>

    //licences
    <string name="myLicense">
        Copyright 2018 Stanislav Batura \n
        Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n

   http://www.apache.org/licenses/LICENSE-2.0\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License\n\n External libraries:\n\n
    </string>

    <string name="dexPermis">
        RxPermissions \n
        Copyright (C) 2015 Thomas Bruyelle \n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n

   http://www.apache.org/licenses/LICENSE-2.0\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
    <string name="dialogPermis">
        SimpleDialogFragments\n
        Copyright 2018 Philipp Niedermayer (github.com/eltos)\n
        Licensed under the Apache License 2.0\n
        You may only use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
        the Software in compliance with the License.\n
        For more information visit http://www.apache.org/licenses/LICENSE-2.0

        </string>


    <string name="enter_a_pin">Enter a 4 digit PIN</string>
    <string name="repeat_pin">Repeat</string>
    <string name="Repeat">Repeat PIN</string>
    <string name="delletePass">Enter current PIN, and press OK to delete password</string>
    <string name="setPin">Set PIN</string>
    <string name="photoToast">Sorry this chapter is in developing</string>


    <string name="about">    A simple notepad where you can easily record a note or save a photo.\n\n

Features:\n
* Best notepad full free application\n
        * Create infinity number of folders to storing your notes.\n
* Offline notepad where you can easily write thoughts without using the internet.\n
* Notepad with protection. You can protect your notes with a password.\n
* Adjust the color of your text for notes or entries in the diary.\n
* Share your notes with other applications.\n
* Check spelling in all your notes.\n
* An unincorporated notepad.\n
* Easy application that loads instantly.\n
* Free diary and notepad for smartphones on android.</string>
    <string name="drawOther">Other</string>
    <string name="colorDilogTitle">Select note color</string>
    <string name="validTimeNo">No valid time</string>
    <string name="pin">PIN</string>

    <string name="admob_app_id">ca-app-pub-5445531684247341~9468768820</string>
    <string name="banner_ad_unit_id">ca-app-pub-5445531684247341/3450155384</string>



    /* Additionals strings for version 1.1 --------------------------------------------------------
    */
    <string name="nav_synch">synchronize</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="write_to_db">Save</string>
    <string name="pull_from_db">Get</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="xxt_dialog_text">"This function will create a GoodNotes.txt file with all notes in your "
                " \'sdcard\' folder on a smartphone. If you can't find it or smth go wrong "
                "please, contact me via email"</string>

    <string name="ok_but">Ok</string>
    <string name="save_in_file">Save in file</string>
    <string name="sync_dialog_text">You can synchronize your notes to automatically restore it on a new phone</string>
    <string name="start">start</string>

</resources>
