<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:bbn_itemColorActive="#FFFFFFFF"
    app:bbn_itemColorInactive="#7FFFFFFF"
    app:bbn_badgeColor="#FFCC0000"
    app:bbn_rippleColor="#99FFFFFF">

    <item
        android:id="@+id/bbn_image"
        android:color="@color/colorPrimary"
        android:icon="@drawable/outline_add_photo_alternate_white_24"
        android:title="@string/bottomImage"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bbn_color"
        android:color="@android:color/holo_green_dark"
        android:icon="@drawable/baseline_color_lens_black_24"
        android:title="@string/bottomColr"
        app:showAsAction="ifRoom"    />
    <item
        android:id="@+id/bbn_notific"
        android:color="@android:color/holo_orange_dark"
        android:icon="@drawable/baseline_notifications_active_black_24"
        android:title="@string/bottomNotification"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bbn_sett"
        android:color="#FF5252"
        android:icon="@drawable/outline_delete_forever_white_24"
        android:title="@string/bottomDelete"
        app:showAsAction="ifRoom"        />

</menu>